Adjusted the width of all the wrapper components to avoid the repositioning of their inner elements due to the scrollbar appearance.

--- a/src/app/components/Footer/styles.module.css
+++ b/src/app/components/Footer/styles.module.css
@@ -15,7 +15,7 @@
   height: 100%;
   justify-content: center;
   max-width: 1280px; /* chakra-ui xl default breakpoint */
-  padding: 0 16px;
+  padding: 0 2.5rem 0 2rem;
   width: 100%;
 }
 
