--- a/src/app/global.css
+++ b/src/app/global.css
@@ -3,12 +3,13 @@ body {
   color: #6d5555;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 main {
   max-width: 1280px;
   min-height: calc(100vh - 56px - 56px);
-  padding: 2rem 2rem 4rem 2rem;
+  padding: 2rem 2.5rem 4rem 2rem;
   width: 100%;
 }
